<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_margin="5sp"
    app:cardCornerRadius="2dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
   android:layout_marginBottom="4dp"
    android:background="@color/background_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="368dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fav_event_img"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/event"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.008"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/concert" />

        <TextView
            android:id="@+id/txt_event_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/event_title"
            app:layout_constraintStart_toEndOf="@+id/fav_event_img"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_event_place"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_place"
            app:layout_constraintStart_toEndOf="@+id/fav_event_img"
            app:layout_constraintTop_toBottomOf="@+id/txt_event_title" />

        <TextView
            android:id="@+id/txt_event_description"
            android:layout_width="129dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/event_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fav_event_img"
            app:layout_constraintTop_toBottomOf="@+id/text_event_place"
            app:layout_constraintVertical_bias="0.09" />

        <TextView
            android:id="@+id/txt_event_month"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/event_month"
            app:layout_constraintStart_toEndOf="@+id/fav_event_img"
            app:layout_constraintTop_toBottomOf="@+id/txt_event_description" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="29dp"
            android:layout_height="98dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/see_more"
            android:background="@color/background_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_event_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.458"
            app:srcCompat="@drawable/next" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>