<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.user.FrontPage"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_home"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/menuBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu" />

            <ImageView
                android:id="@+id/addBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:padding="5dp"
                android:src="@drawable/add_icon"

                />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/helsinki_city_guide"
                        android:textSize="22sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/search_bg"
                        android:layout_below="@+id/textAppName"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="40dp"
                        android:layout_marginBottom="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            android:elevation="8dp"
                            android:text="@string/search_bar"
                            android:textSize="18sp" />

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="15dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/ic_search" />


                    </RelativeLayout>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/background_home">

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/sauna"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/sauna" />

                            </androidx.cardview.widget.CardView>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/sauna"
                            android:textAlignment="center"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/background_home">

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/recreation"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/recreation" />

                            </androidx.cardview.widget.CardView>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/recreation"
                            android:textAlignment="center"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/background_home">

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/library"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/library" />

                            </androidx.cardview.widget.CardView>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/library"
                            android:textAlignment="center"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/background_home">

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/nature"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/nature" />

                            </androidx.cardview.widget.CardView>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/nature"
                            android:textAlignment="center"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_margin="10dp"
                            android:background="@color/background_home">

                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/concert"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/concert" />

                            </androidx.cardview.widget.CardView>


                        </RelativeLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/concert"
                            android:textAlignment="center"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/recommendation_background"
                    android:layout_width="393dp"
                    android:layout_height="47dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/search_bg"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/recommended_location"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="18sp" />


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_recommendation"
                    android:layout_width="match_parent"
                    android:layout_height="290dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fav_activities"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fav_event_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="350dp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fav_events"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="100dp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>